Fix: navbar top alignment

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -817,3 +817,15 @@ html {
 h1, h2, h3, h4, h5, h6 {
   scroll-margin-top: 1rem;
 }
+
+@media (max-width: 767px) {
+  .td-navbar {
+    top: 0;
+    margin-top: 0;
+    padding-top: 0;
+  }
+
+  body {
+    padding-top: 0;
+  }
+}
